roles are tested and user access assignment and retrieval is working
