# src/api/roles/roles.js
@@ -1,20 +1,17 @@
 import jsonPatch from 'jsonpatch';
-import Boom from '@hapi/boom';
 import dal from './dal';
-import dom from '../domains/domain';
-import account from '../accounts/account';
 import helper from '../../helper';
 import ueEvents from '../../events/ueEvents';
 
 export default {
-	async writeCustomRole(agId, data) {
+	async writeCustomRole(data) {
 		data.custom = true;
 		data.permissions = [];
 		const output = await dal.writeRole(data);
 		ueEvents.emit(data.authGroup, 'ue.role.create', output);
 		return output;
 	},
-	async writeRole(agId, data) {
+	async writeRole(data) {
 		data.custom = false;
 		data.permissions = [];
 		const output = await dal.writeRole(data);
@@ -27,6 +24,11 @@ export default {
 		return dal.getAllRoles(authGroupId, query);
 	},
 
+	async getAllRolesAcrossProductsByOrg(authGroupId, organization, q) {
+		const query = await helper.parseOdataQuery(q);
+		return dal.getAllRolesAcrossProductsByOrg(authGroupId, organization, query);
+	},
+
 	async getRoles(authGroupId, product, q) {
 		const query = await helper.parseOdataQuery(q);
 		return dal.getRoles(authGroupId, product, query);
@@ -34,11 +36,15 @@ export default {
 
 	async getOrganizationRoles(authGroupId, product, organization, q) {
 		const query = await helper.parseOdataQuery(q);
-		return dal.getRoles(authGroupId, product, organization, query);
+		return dal.getOrganizationRoles(authGroupId, product, organization, query);
 	},
 
 	async getRole(authGroupId, product, id) {
 		return dal.getRole(authGroupId, product, id);
+	},
+
+	async getRoleByOrganizationAndId(authGroupId, organization, id) {
+		return dal.getRoleByOrganizationAndId(authGroupId, organization, id);
 	},
 
 	async deleteRole(authGroupId, product, id) {
@@ -50,10 +56,11 @@ export default {
 		 */
 		const result = await dal.deleteRole(authGroupId, product, id);
 		ueEvents.emit(authGroupId, 'ue.role.destroy', result);
+		return result;
 	},
 
 	async patchRole(authGroup, id, product, update, modifiedBy) {
-		const role = await dal.getRole(authGroup.id || authGroup._id, id);
+		const role = await dal.getRole(authGroup.id || authGroup._id, product, id);
 		const patched = jsonPatch.apply_patch(role.toObject(), update);
 		patched.modifiedBy = modifiedBy;
 		const result = await dal.patchRole(authGroup.id || authGroup._id, id, product, patched);
